# chat-agent-mcpserver

./: Dockerfile_mcpclient_token  Dockerfile_mcpserver  app_config.py  end_to_end_evaluation.py  pyproject.toml  tapis_mcp_client_header.py  tapis_mcp_server.py
benchmark/: evaluator.py
data/: data_new_systems_apps_all.json  llama4_generated_user_specific_noragoutput_2026-06-04.16:06:02.json  llama4_gnereted_answers_no_rag_output_2026-06-04.13:05:35.json  mcp_qa.json  new_openai_mcp_generated_output_2026-05-20.16:08:05.json  new_sambanova_mcp_generated_output_2026-05-20.16:40:06.json  openai_generated_answers_no_rag_output_2026-06-04.12:09:01.json  rag_userspecific_openai_mcp_generated_output_2026-06-04.19:42:20.json  user_specific_mcp_generated_output_2026-06-04.06:36:34.json  user_specific_openai_generated_no_rag_output_2026-06-04.16:27:32.json
data/outputs/no-rag-all/: llama4_asa_judge_llama4_generated_answers_no_rag_qa_eval_output_2026-06-04.13:23:26.csv  llama4_asa_judge_openai_generated_norag_qa_eval_output_2026-06-04.12:09:01.csv  openai_asa_judge_for_llama4_generated_answers_norag_qa_eval_output_2026-06-04.13:05:35.csv  openai_asa_judge_for_openai_generated_norag_qa_eval_output_2026-06-04.12:28:11.csv
data/outputs/no-rag-user-specific/: llama4_asa_judge_userspecific_llama4_generate_answer_no_rag_qa_eval_output_2026-06-04.16:06:02.csv  openai_asa_judge_user_specific_llama4_generated_no_rag_qa_eval_output_2026-06-04.16:15:15.csv  openai_asa_judge_userspecific_openai_generated_answer_no_rag_qa_eval_output_2026-06-04.16:27:32.csv
(+8 files in other folders)
