[project]
name = "agent-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "fastmcp>=2.14.2",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-classic>=1.0.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "langchain-sambanova>=1.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tapipy>=25.4.0",
]
