[project]
name = "agent-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix>=14.8.0",
    "arize-phoenix-evals>=3.0.0",
    "arize-phoenix-otel>=0.15.0",
    "code-bert-score>=0.4.1",
    "fastapi>=0.128.0",
    "fastmcp>=2.14.2",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-classic>=1.0.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "langchain-sambanova>=1.0.0",
    "mltk>=0.0.5",
    "nest-asyncio>=1.6.0",
    "nltk>=3.9.2",
    "openai>=2.14.0",
    "openinference-instrumentation-langchain>=0.1.62",
    "openinference-instrumentation-mcp>=2.0.3",
    "openinference-instrumentation-openai>=0.1.44",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rogue>=0.0.2",
    "rouge>=1.0.1",
    "rouge-score>=0.1.2",
    "sambanova>=1.3.0",
    "tapipy>=25.4.0",
]
